--- a/coreui/package.json
+++ b/coreui/package.json
@@ -31,13 +31,14 @@
     "@coreui/coreui": "~3.0.0",
     "@coreui/icons": "~1.0.1",
     "@coreui/utils": "~1.2.2",
-    "@coreui/vue": "~3.0.0",
-    "@coreui/vue-chartjs": "~1.0.3",
-    "vue": "~2.6.11",
-    "vue-router": "~3.1.5",
-    "vuex": "~3.1.2",
+    "@coreui/vue": "^3.0.12",
+    "@coreui/vue-chartjs": "^1.0.6",
     "axios": "^0.19.0",
-    "cropperjs": "^1.5.6"
+    "cropperjs": "^1.5.9",
+    "vue": "^2.6.12",
+    "vue-i18n": "^8.22.2",
+    "vue-router": "~3.1.5",
+    "vuex": "~3.1.2"
   },
   "devDependencies": {
     "@babel/core": "~7.8.4",
@@ -56,7 +57,7 @@
     "node-sass": "~4.13.1",
     "npm-run-all": "~4.1.5",
     "sass-loader": "~8.0.2",
-    "vue-template-compiler": "~2.6.11"
+    "vue-template-compiler": "^2.6.12"
   },
   "browserslist": [
     "> 1%",
