--- a/coreui/package.json
+++ b/coreui/package.json
@@ -33,6 +33,7 @@
     "@coreui/utils": "~1.2.2",
     "@coreui/vue": "^3.0.12",
     "@coreui/vue-chartjs": "^1.0.6",
+    "array-move": "^3.0.1",
     "axios": "^0.19.0",
     "cropperjs": "^1.5.9",
     "vue": "^2.6.12",
